# pemon

./: 3700x-asus-b450i-performance.txt  Cargo.toml
src/: cpu.rs  errors.rs  hdd.rs  main.rs  sensors.rs
