[package]
name = "pemon"
version = "0.1.0"
authors = ["Mark Zhang <ace119@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.7"
env_logger = "0.6.2"
error-chain = "0.12.1"
clap = "2.33.0"
nix = "0.14.1"
subprocess = "0.1.18"
